# cpp-topics

./: .gitignore  CMakeLists.txt  README.md  main.cc
Alexandrescu/policy_based_design/: CMakeLists.txt  compile_time_template_assert.cc  concepts.cc  creator_templ_param.cc  creator_templ_param_with_policy_member.cc  local_class.cc  sfinae.cc
FSM/: CMakeLists.txt  uml.txt  usingMap.cpp  usingSwitch.cpp
FSM/app/: app.hpp
FSM/map/: map.hpp
FSM/switch/: event.hpp  fsmStateController.hpp  state.hpp
Ptrs/: c-str.cc  list.cc
Solid/: open_closed.cc  single_responsibility.cc
Testing/DocTest/: CMakeLists.txt  conanfile.txt  main.cc
Testing/GTest/: CMakeLists.txt  hello_test.cc  how_to_get_code_coverage.txt  main.cc
Testing/GTest/include/: bar.h  fifo.h  static_foo.h
Testing/GTest/src/: bar.cc  static_foo.cc
Testing/GTest/test/: StaticClass.cc  TestFifo.cc  bar_test.cc
Testing/GTest/toolchain/: qnx.cmake
Testing/GoogleTestFramework/TestClass/: CMakeLists.txt  test_class.cc  test_class_mocks.cc  test_weather_service.cc
Testing/GoogleTestFramework/TestClass/include/: calculator.h  logger.h  provider.h  service.h  weather_api_client.h  weather_service.h  weather_service_mocks.h
Testing/GoogleTestFramework/TestFunctions/: CMakeLists.txt  test_fun.cc  test_fun_param.cc
best/Task1/: CMakeLists.txt  main.cpp
best/Task1/header/: static_containers.h
best/Task3/: CMakeLists.txt  main.cpp
best/Task5/: CMakeLists.txt  main.cpp
boost/cmake-add-boost/: CMakeLists.txt  main.cc
boost/cmake-add-boost/libs/: mylib.cc  mylib.h
build-systems/bazel/: README.md
c++17/: constexpr_if.cc  fold_expression.cc  init_condition.cc  inline_members.cc  non_type_template_parameter.cc  structured_bindings_array.cc  structured_bindings_map.cc  structured_bindings_ref.cc  structured_bindings_tuple_return.cc  template_argument_deduction.cc
c++20/modules/hello-world-module/: CMakeLists.txt  clang_modules.cmake  foo.cc  gcc_modules.cmake  main.cc
c++20/modules/hello-world-module/gcm.cache/: foo.gcm
c++20/ranges/: ranges-01.cc
c++23/: CMakeLists.txt  build_clang18_from_sources.txt  bulk_execute.cc  expected.cc  flat_associative_containers.cc  generator.cc  hello_cpp23.cc  print.cc
casts/: dynamic.cc
class/: functors.cc
class/ctor/: calls.cc  count_obj.cc  template-ctor.cc
class/friend/: friend_injection_access_priv_members.cc
class/size/: hiding.cc  simple_size.cc  struct-size.cc
class/smart_obj/: not_really_smart.cc
class/virtual/: polymorphism_on_classes.cc  shape  shape.cc
cmake/: sources.cmake
cuda/Mandelbrot/: mandel.cu  mandel_animation.cu  mandel_image.cu  mandelbrot.pgm
cuda/hello/: CMakeLists.txt  hello.cu  hello_simple.cu  sum_vector.cc  sum_vector.cu
cuda/start/: CMakeLists.txt  main.cu  two_arrays_sum.cc  two_arrays_sum.cu
design_patterns/Builder/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  facet_builder.cpp  fluent_builder.cpp
design_patterns/ChainOfResponsibility/: CMakeLists.txt  list_pointer_chain.cpp  pointer_chain.cpp
design_patterns/Command/: CMakeLists.txt  command.cc
design_patterns/Flyweight/: CMakeLists.txt  main.cpp  test.cpp
design_patterns/Flyweight/include/: sentence.h
design_patterns/Flyweight/tests/: tests.h
design_patterns/Interpreter/: CMakeLists.txt  interpreter.cc
design_patterns/Proxy/: CMakeLists.txt  proxy_property.cpp  virtual_proxy.cpp
design_patterns/Strategy/: CMakeLists.txt  main.cpp
design_patterns/Strategy/include/: strategy.h
design_patterns/Strategy/tests/: tests.h
destructor/: CMakeLists.txt  destructor.cc
destructor/include/: dtor.h
functional/: clousure_counters.cc  fractional.cc  lambdas.cpp
hackerRank/: CMakeLists.txt  PlusMinus  PlusMinus.cc  vector-sort.cc
hackerRank/AbstractClasses/: CMakeLists.txt  main.cpp
hackerRank/SharedPointer/: CMakeLists.txt  shared_tests.cpp  unique_tests.cpp
hackerRank/SharedPointer/shared_include/: shared_ptr.h
hackerRank/SharedPointer/unique_include/: unique_ptr.h
hackerRank/week1/CamelCase4/: CMakeLists.txt  Task.txt  camelcase.cc  tests.cc
hackerRank/week1/CamelCase4/include/: parser.h
hackerRank/week4/LeftRotation/: CMakeLists.txt  main.cpp
hackerRank/week4/NumberLineJumps/: CMakeLists.txt  main.cpp
hackerRank/week4/PickingNumbers/: CMakeLists.txt  main.cpp
hackerRank/week4/SeparateNumbers/: CMakeLists.txt  main.cpp
leet-code/: interval-map.cc
multithreading/: cv.cc
multithreading/Tasks/: CMakeLists.txt  async.cc
multithreading/Thread-safe-initialization/: CMakeLists.txt  call_once.cc  constexpr.cc  deadlock.cc  reader_writer_lock.cc  sender_receiver.cc  thread_local.cc
multithreading/building_h2o/: CMakeLists.txt  building_h2o_atomic.cc  building_h2o_barrier.cc  building_h2o_cv.cc  building_h2o_cv_2.cc
multithreading/coding-tasks/Producer-Consumer-Problem/: CMakeLists.txt  gpt.cc  main.cpp  task.txt
multithreading/lock_hierarchy/AvoidDeadLock/: CMakeLists.txt  avoid_deadlock_hierarchy.cc  hierarchical_mutex.h
multithreading/print_in_order/: CMakeLists.txt  README.md  main.cpp
multithreading/print_in_order/include/: bar.h  foo.h  zoo.h
multithreading/trie/: CMakeLists.txt  main.cc
multithreading/trie/include/: trie.h  trie_threadsafe.h
multithreading/trie/src/: trie.cc  trie_threadsafe.cc
multithreading/trie/test/: CMakeLists.txt  benchmark_test.cc
optimization/: integer_vs_float.cc
patterns/: singleton_raw_ptr.cc  singleton_unique_ptr.cc  tag_dispatch.cc
patterns/projects_uses_patterns/Logger/: CMakeLists.txt  log.cc
patterns/projects_uses_patterns/Logger/include/: CMakeLists.txt  logger.h
patterns/projects_uses_patterns/Logger/src/: CMakeLists.txt  logger.cc
patterns/strategy/: CMakeLists.txt  README.md  main.cpp
patterns/strategy/Testing/: TAG
patterns/strategy/Testing/20230308-1429/: Test.xml
patterns/strategy/include/: node.h
patterns/strategy/tests/integration/: tests.cmake
patterns/strategy/tests/unit/: unit.cmake
patterns/strategy/tests/unit/src/: smoke.cc
templates/: deduction.cc  function.cc
(+96 files in other folders)
